# DD_optimization_c_plusplus

./: .gitignore  CMakeLists.txt  README.md  independent_set_file.gml  knapsack_statistics.txt  set_covering_file.gml
Class/: DD.h  DD.tpp
Class/AnswerStructure/: ObjectiveStructure.h  ObjectiveStructure.tpp
Class/DDBuilder/: AbstractDDBuilder.h  AbstractDDBuilder.tpp  DDBuilder.h  DDBuilder.tpp
Class/DDStructure/: Arc.h  Arc.tpp  Graph.h  Graph.tpp  Node.h  Node.tpp  utils.cpp  utils.h
Class/GraphVisualization/: GraphFile.h  GraphFile.tpp
Class/ObjectiveFunction/: AbstractObjective.h  AbstractObjective.tpp  LinearObjectiveDP.h  LinearObjectiveDP.tpp  ObjectiveFunction.h  ObjectiveFunction.tpp
Class/Problems/: AbstractProblemClass.h  AbstractProblemClass.tpp
Class/ReduceDDBuilder/: ReduceDDBuilder.h  ReduceDDBuilder.tpp
Class/RelaxedDDBuilder/: RelaxedDDBuilder.h  RelaxedDDBuilder.tpp
Class/RestrictedDDBuilder/: RestrictedDDBuilder.h  RestrictedDDBuilder.tpp
DD_optimization_program/: CMakeLists.txt  README.md  knapsack_file.gml
DD_optimization_program/Class/: DD.cpp  DD.h
DD_optimization_program/Class/AnswerStructure/: ObjectiveStructure.cpp  ObjectiveStructure.h
DD_optimization_program/Class/DDBuilder/: AbstractDDBuilder.cpp  AbstractDDBuilder.h  DDBuilder.cpp  DDBuilder.h
DD_optimization_program/Class/DDStructure/: Arc.cpp  Arc.h  Graph.cpp  Graph.h  Node.cpp  Node.h  utils.cpp  utils.h
DD_optimization_program/Class/GraphVisualization/: GraphFile.cpp  GraphFile.h
DD_optimization_program/Class/ObjectiveFunction/: AbstractObjective.cpp  AbstractObjective.h  LinearObjectiveDP.cpp  LinearObjectiveDP.h  ObjectiveFunction.cpp  ObjectiveFunction.h
DD_optimization_program/Class/Problems/: AbstractProblemClass.cpp  AbstractProblemClass.h
DD_optimization_program/Class/ReduceDDBuilder/: ReduceDDBuilder.cpp  ReduceDDBuilder.h
DD_optimization_program/Class/RelaxedDDBuilder/: RelaxedDDBuilder.cpp  RelaxedDDBuilder.h
DD_optimization_program/Class/RestrictedDDBuilder/: RestrictedDDBuilder.cpp  RestrictedDDBuilder.h
DD_optimization_program/Examples/IndependentSet/: IndependentSetMain  IndependentSetMain.cpp  IndependentSetProblem.cpp  IndependentSetProblem.h
DD_optimization_program/Examples/Knapsack/: KnapsackMain.cpp  KnapsackProblem.cpp  KnapsackProblem.h
DD_optimization_program/Examples/SetCovering/: SetCoveringMain.cpp  SetCoveringProblem.cpp  SetCoveringProblem.h
DD_optimization_program/Exceptions/: MyExceptions.cpp  MyExceptions.h
DD_optimization_program/Test/: test_ProblemIndependentSet.cpp  test_ProblemKnapsack.cpp  test_ProblemSetCovering.cpp
DD_optimization_program/Test/dd_controller_generators/: DDIndependentSet.cpp  DDKnapsack.cpp  DDSetCovering.cpp
DD_optimization_program/Test/gml_files/: exact_dd_independent_set.gml  exact_dd_knapsack.gml  exact_dd_set_covering.gml  reduce_dd_knapsack.gml  reduce_dd_set_covering.gml  relax_dd_independent_set.gml  relax_dd_knapsack.gml  relax_dd_set_covering.gml  restricted_dd_independent_set.gml  restricted_dd_knapsack.gml  restricted_dd_set_covering.gml
DD_optimization_program/Test/gml_files/Copia de txt_files/: createDDIndependentSet.txt  createReduceDDIndependentSet.txt  createRelaxedDDKnapsack.txt  createRestrictedDDKnapsack.txt
DD_optimization_program/Test/txt_files/: createDDIndependentSet.txt  createDDKnapsack.txt  createDDSetCovering.txt  createReduceDDIndependentSet.txt  createReduceDDKnapsack.txt  createReduceDDSetCovering.txt  createRelaxedDDIndependentSet.txt  createRelaxedDDKnapsack.txt  createRelaxedDDSetCovering.txt  createRestrictedDDIndependentSet.txt  createRestrictedDDKnapsack.txt  createRestrictedDDSetCovering.txt
DataInstances/: generate_knapsack_instances.py
DataInstances/txt/: knapsack_instance_v1000_d10_seed1.txt  knapsack_instance_v300_d100_seed1.txt  knapsack_instance_v500_d50_seed1.txt
Examples/IndependentSet/: IndependentSetMain.cpp  IndependentSetProblem.cpp  IndependentSetProblem.h
Examples/Knapsack/: Data.cpp  KnapsackMain.cpp  KnapsackProblem.cpp  KnapsackProblem.h  knapsack_statistics.txt
Examples/KnapsackState/: KnapsackProblemState.cpp  KnapsackProblemState.h  KnapsackStateMain.cpp
Examples/SetCovering/: SetCoveringMain.cpp  SetCoveringProblem.cpp  SetCoveringProblem.h
Exceptions/: MyExceptions.cpp  MyExceptions.h
Test/: test_ProblemIndependentSet.cpp  test_ProblemKnapsack.cpp  test_ProblemKnapsackState.cpp  test_ProblemSetCovering.cpp
Test/dd_controller_generators/: DDIndependentSet.cpp  DDKnapsack.cpp  DDKnapsackState.cpp  DDSetCovering.cpp
Test/gml_files/: restricted_dd_independent_set.gml  restricted_dd_set_covering.gml
